--- a/package.json
+++ b/package.json
@@ -5,15 +5,17 @@
   "homepage": "https://dbarochiya.github.io/me",
   "dependencies": {
     "gh-pages": "^2.0.1",
+    "loader-runner": "^4.3.0",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
     "react-scripts": "2.1.5",
     "travis": "^0.1.1",
+    "webpack": "^4.28.3",
     "yarn": "^1.13.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "react-scripts --openssl-legacy-provider start",
+    "build": "react-scripts --openssl-legacy-provider build",
     "predeploy": "yarn run build",
     "deploy": "gh-pages -d build",
     "test": "react-scripts test",
