--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
   },
 
   "engines":{
-    "node": "18.1.0"
+    "node": "17.0.0"
   },
   "scripts": {
-    "start": "react-scripts --openssl-legacy-provider start",
-    "build": "react-scripts --openssl-legacy-provider build",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
     "predeploy": "yarn run build",
     "deploy": "gh-pages -d build",
     "test": "react-scripts test",
